--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "socket.io-client": "4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
     "zustand": "5.0.2"
@@ -84,13 +83,14 @@
     "@eslint/eslintrc": "3.2.0",
     "@next/bundle-analyzer": "^15.5.4",
     "@playwright/test": "1.55.1",
-    "@tailwindcss/postcss": "4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/react": "16.1.0",
     "@types/node": "20.17.10",
     "@types/react": "19.0.5",
     "@types/react-dom": "19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "eslint": "9.17.0",
     "eslint-config-next": "15.5.4",
@@ -103,7 +103,7 @@
     "lint-staged": "15.2.11",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "5.6.3",
     "vitest": "2.1.8"
   }
