--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tanstack/react-query": "5.64.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/socket.io": "^3.0.1",
+    "@vitejs/plugin-react": "^5.0.3",
     "axios": "1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
