--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "zustand": "5.0.2"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
     "@eslint/eslintrc": "3.2.0",
     "@next/bundle-analyzer": "^15.5.4",
     "@playwright/test": "1.55.1",
@@ -92,6 +93,7 @@
     "@types/react-dom": "19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^7.0.3",
     "eslint": "9.17.0",
     "eslint-config-next": "15.5.4",
@@ -101,6 +103,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "9.1.7",
+    "jest-axe": "^10.0.0",
     "jsdom": "^27.0.0",
     "lint-staged": "15.2.11",
     "postcss": "^8.5.6",
